<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/add_recipe" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollAddForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name"/>

            <ImageView
                android:id="@+id/ivAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_default_recipe"
                android:contentDescription="@string/recipe_image"/>

            <EditText
                android:id="@+id/etAddDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:paddingBottom="16dp"/>

            <EditText
                android:id="@+id/etAddNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_hint"
                android:inputType="textMultiLine"
                android:paddingBottom="16dp"/>

            <EditText
                android:id="@+id/etAddSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps_hint"
                android:inputType="textMultiLine"
                android:paddingBottom="16dp"/>

            <EditText
                android:id="@+id/etAddServings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/servings_hint"
                android:inputType="number"
                android:paddingVertical="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/ingredients_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

            <LinearLayout
                android:id="@+id/llAddIngredients"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="+ New Ingredient"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_recipe"
        app:srcCompat="@drawable/ic_save"
        app:layout_anchor="@id/scrollAddForm"
        app:layout_anchorGravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>